--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,5 +3,6 @@ server.port=8080
 
 spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=changeme
+spring.datasource.password=123456
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.default_schema=bankapp
